--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint:fix": "eslint . --ext=js,jsx,ts,tsx --fix --ignore-path .gitignore",
     "format": "prettier --write **/*.{js,jsx,ts,tsx,css,md,json} --ignore-path .gitignore",
     "format:check": "prettier --check **/*.{js,jsx,ts,tsx,css,md,json} --ignore-path .gitignore",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "export": "next export"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
